Switched concat for string formatting.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ emulator-account.pkey
 imports
 
 Mneme.pkey
+# flow
+emulator-account.pkey
+imports
+
+ArtDrop.pkey
+# flow
+emulator-account.pkey
+imports
